--- a/app.yaml
+++ b/app.yaml
@@ -7,8 +7,13 @@ handlers:
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
   login: admin
+- url: /admin/purge
+  script: purge.py
+  login: admin
 - url: /css
   static_dir: css
+- url: /images
+  static_dir: images
 - url: /.*
   script: views.py
 
