--- a/app.yaml
+++ b/app.yaml
@@ -10,10 +10,8 @@ handlers:
 - url: /admin/purge
   script: purge.py
   login: admin
-- url: /css
-  static_dir: css
-- url: /images
-  static_dir: images
+- url: /static
+  static_dir: static
 - url: /.*
   script: views.py
 
